# SARA

./: README.md
Central/: crud.py  main.py  models.py  pyproject.toml  utils.py
Central/api/: deps.py  router.py
Central/api/routes/: climate.py  login.py  station.py  users.py  utils.py
Central/core/: config.py  db.py
Central/schemas/: stationData.py
Interface/: LoginPage.py  pyproject.toml
