[tool.poetry]
name = "central"
version = "0.1.0"
description = "API Central do sistema SARA"
authors = ["Murilo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlmodel = "^0.0.18"
passlib = "^1.7.4"
pydantic-settings = "^2.2.1"
sentry-sdk = "^2.1.1"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
emails = "^0.6"
tenacity = "^8.3.0"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
