[tool.poetry]
name = "interface"
version = "0.1.0"
description = ""
authors = ["Murilo Sobreiro <murilosobreiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
